@@ -134,20 +134,31 @@ mod_reduce (bn256 *X, const bn512 *A, const bn256 *B, const bn256 *MU_lower)
 #undef borrow
 }
 
+/*
+ * Reference:
+ * Donald E. Knuth, The Art of Computer Programming, Vol. 2:
+ * Seminumerical Algorithms, 3rd ed. Reading, MA: Addison-Wesley, 1998
+ *
+ * Max loop: X=0x8000...0000 and N=0xffff...ffff
+ */
+#define MAX_GCD_STEPS_BN256 (3*256-2)
+
 /**
  * @brief C = X^(-1) mod N
  * 
+ * Assume X and N are co-prime (or N is prime).
  */
-#define MAX_N_BITS 256
-
-void
+int
 mod_inv (bn256 *C, const bn256 *X, const bn256 *N)
 {
   bn256 u[1], v[1], tmp[1];
   bn256 A[1] = { { { 1, 0, 0, 0, 0, 0, 0, 0 } } };
   uint32_t carry;
 #define borrow carry
-  int n = MAX_N_BITS * 3;
+  int n = MAX_GCD_STEPS_BN256;
+
+  if (bn256_is_zero (X))
+    return -1;
 
   memset (C, 0, sizeof (bn256));
   memcpy (u, X, sizeof (bn256));
@@ -341,4 +352,6 @@ mod_inv (bn256 *C, const bn256 *X, const bn256 *N)
 	}
     }
 #undef borrow
+
+  return 0;
 }
