@@ -1,3 +1,3 @@
 void mod_reduce (bn256 *X, const bn512 *A, const bn256 *B,
 		 const bn256 *MU_lower);
-void mod_inv (bn256 *X, const bn256 *A, const bn256 *N);
+int mod_inv (bn256 *X, const bn256 *A, const bn256 *N);
