@@ -284,187 +284,6 @@ modp256k1_sqr (bn256 *X, const bn256 *A)
   modp256k1_reduce (X, AA);
 }
 
-/**
- * @brief  C = (1 / a)  mod p256k1
- *
- * Return -1 on error.
- * Return 0 on success.
- */
-#define MAX_N_BITS 256
-
-int
-modp256k1_inv (bn256 *C, const bn256 *a)
-{
-  bn256 u[1], v[1], tmp[1];
-  bn256 A[1] = { { { 1, 0, 0, 0, 0, 0, 0, 0 } } };
-  uint32_t carry;
-  int n = MAX_N_BITS * 3;
-
-  if (bn256_is_zero (a))
-    return -1;
-
-  memset (C, 0, sizeof (bn256));
-  memcpy (u, a, sizeof (bn256));
-  memcpy (v, P256K1, sizeof (bn256));
-
-  while (n--)
-    {
-      int c = (bn256_is_even (u) << 1) + bn256_is_even (v);
-
-      switch (c)
-	{
-	case 3:
-	  bn256_shift (u, u, -1);
-	  if (bn256_is_even (A))
-	    {
-	      bn256_add (tmp, A, P256K1);
-	      carry = 0;
-	    }
-	  else
-	    carry = bn256_add (A, A, P256K1);
-
-	  bn256_shift (A, A, -1);
-	  A->word[7] |= carry * 0x80000000;
-
-	  bn256_shift (v, v, -1);
-	  if (bn256_is_even (C))
-	    {
-	      bn256_add (tmp, C, P256K1);
-	      carry = 0;
-	    }
-	  else
-	    carry = bn256_add (C, C, P256K1);
-
-	  bn256_shift (C, C, -1);
-	  C->word[7] |= carry * 0x80000000;
-
-	  if (bn256_is_ge (tmp, tmp))
-	    {
-	      bn256_sub (tmp, tmp, tmp);
-	      modp256k1_sub (tmp, tmp, tmp);
-	    }
-	  else
-	    {
-	      bn256_sub (tmp, tmp, tmp);
-	      modp256k1_sub (tmp, tmp, A);
-	    }
-	  break;
-
-	case 1:
-	  bn256_shift (tmp, tmp, -1);
-	  if (bn256_is_even (tmp))
-	    {
-	      bn256_add (tmp, tmp, P256K1);
-	      carry = 0;
-	    }
-	  else
-	    carry = bn256_add (tmp, tmp, P256K1);
-
-	  bn256_shift (tmp, tmp, -1);
-	  tmp->word[7] |= carry * 0x80000000;
-
-	  bn256_shift (v, v, -1);
-	  if (bn256_is_even (C))
-	    {
-	      bn256_add (tmp, C, P256K1);
-	      carry = 0;
-	    }
-	  else
-	    carry = bn256_add (C, C, P256K1);
-
-	  bn256_shift (C, C, -1);
-	  C->word[7] |= carry * 0x80000000;
-
-	  if (bn256_is_ge (tmp, tmp))
-	    {
-	      bn256_sub (tmp, tmp, tmp);
-	      modp256k1_sub (tmp, tmp, tmp);
-	    }
-	  else
-	    {
-	      bn256_sub (tmp, tmp, tmp);
-	      modp256k1_sub (tmp, tmp, A);
-	    }
-	  break;
-
-	case 2:
-	  bn256_shift (u, u, -1);
-	  if (bn256_is_even (A))
-	    {
-	      bn256_add (tmp, A, P256K1);
-	      carry = 0;
-	    }
-	  else
-	    carry = bn256_add (A, A, P256K1);
-
-	  bn256_shift (A, A, -1);
-	  A->word[7] |= carry * 0x80000000;
-
-	  bn256_shift (tmp, tmp, -1);
-	  if (bn256_is_even (tmp))
-	    {
-	      bn256_add (tmp, tmp, P256K1);
-	      carry = 0;
-	    }
-	  else
-	    carry = bn256_add (tmp, tmp, P256K1);
-
-	  bn256_shift (tmp, tmp, -1);
-	  tmp->word[7] |= carry * 0x80000000;
-
-	  if (bn256_is_ge (tmp, tmp))
-	    {
-	      bn256_sub (tmp, tmp, tmp);
-	      modp256k1_sub (tmp, tmp, tmp);
-	    }
-	  else
-	    {
-	      bn256_sub (tmp, tmp, tmp);
-	      modp256k1_sub (tmp, tmp, A);
-	    }
-	  break;
-
-	case 0:
-	  bn256_shift (tmp, tmp, -1);
-	  if (bn256_is_even (tmp))
-	    {
-	      bn256_add (tmp, tmp, P256K1);
-	      carry = 0;
-	    }
-	  else
-	    carry = bn256_add (tmp, tmp, P256K1);
-
-	  bn256_shift (tmp, tmp, -1);
-	  tmp->word[7] |= carry * 0x80000000;
-
-	  bn256_shift (tmp, tmp, -1);
-	  if (bn256_is_even (tmp))
-	    {
-	      bn256_add (tmp, tmp, P256K1);
-	      carry = 0;
-	    }
-	  else
-	    carry = bn256_add (tmp, tmp, P256K1);
-
-	  bn256_shift (tmp, tmp, -1);
-	  tmp->word[7] |= carry * 0x80000000;
-
-	  if (bn256_is_ge (u, v))
-	    {
-	      bn256_sub (u, u, v);
-	      modp256k1_sub (A, A, C);
-	    }
-	  else
-	    {
-	      bn256_sub (v, v, u);
-	      modp256k1_sub (C, C, A);
-	    }
-	  break;
-	}
-    }
-
-  return 0;
-}
 
 /**
  * @brief  X = (A << shift) mod p256k1
