@@ -7,4 +7,3 @@ void modp256k1_reduce (bn256 *X, const bn512 *A);
 void modp256k1_mul (bn256 *X, const bn256 *A, const bn256 *B);
 void modp256k1_sqr (bn256 *X, const bn256 *A);
 void modp256k1_shift (bn256 *X, const bn256 *A, int shift);
-int modp256k1_inv (bn256 *C, const bn256 *a);
